# meta-saas

./: .gitignore  README.md  pyproject.toml
.github/workflows/: unit_tests.yml
src/hexagon/events/: instance_events.py  organization_events.py  user_events.py
src/hexagon/gateways/: email_gateway.py  message_bus.py
src/hexagon/gateways/repositories/: instances_repository.py  organization_accounts_repository.py  organizations_repository.py  roles_repository.py  users_repository.py
src/hexagon/handlers/: emailing.py  instance_handlers.py  organization_account_handlers.py  wiring.py
src/hexagon/models/: instance.py  organization.py  organization_account.py  role.py  user.py
src/hexagon/services/: hashing.py  jwt.py
src/hexagon/types/: role.py
src/hexagon/use_cases/: instance_commands.py  instance_exceptions.py  instance_use_cases.py  instances_use_cases.py  organization_commands.py  organization_use_cases.py  user_commands.py  user_exceptions.py  user_use_cases.py
src/infrastructure/: app.py  container.py  setup.py
src/infrastructure/in_memory/: in_memory_instances_repository.py
src/infrastructure/message_bus/: in_memory_message_bus.py
src/infrastructure/storage/database/: instances_postgres_json_repository.py
tests/: conftest.py
tests/dummies/: in_memory_instances_repository.py
tests/fakes/: spy_email_gateway.py
tests/unit/: conftest.py  test-env.json  test_instance.py  test_instance_use_cases.py  test_user_handlers.py  test_user_use_cases.py
tests/unit/handlers/: test_instance_handlers.py  test_organization_handlers.py  test_user_handlers.py
(+9 files in other folders)
