[tool.poetry]
name = "meta-saas"
version = "0.1.0"
description = ""
authors = ["Salim Aboubacar <salimaboubacar@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.88.0"
pytest = "^7.2.0"
dependency-injector = "^4.41.0"
uvicorn = "^0.20.0"
email-validator = "^1.3.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
